--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,9 +13,11 @@
     "@react-three/drei": "^9.94.1",
     "@react-three/fiber": "^8.15.14",
     "axios": "^1.6.5",
+    "bootstrap": "^5.3.2",
     "leva": "^0.9.35",
     "r3f-perf": "^7.1.2",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.1",
     "react-scroll": "^1.9.0",
