--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.1",
     "react-scroll": "^1.9.0",
+    "socket.io-client": "^4.7.4",
     "three": "^0.160.0"
   },
   "devDependencies": {
