--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "author": "",
   "license": "ISC",
@@ -18,5 +18,8 @@
     "mongoose": "^8.0.3",
     "multer": "^1.4.5-lts.1",
     "socket.io": "^4.7.3"
+  },
+  "devDependencies": {
+    "jest": "^29.7.0"
   }
 }
