--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest --forceExit --detectOpenHandles --watchAll  --runInBand"
   },
   "author": "",
   "license": "ISC",
@@ -18,6 +18,12 @@
     "mongoose": "^8.0.3",
     "multer": "^1.4.5-lts.1",
     "socket.io": "^4.7.3"
+  },
+  "jest": {
+    "testEnvironment": "node",
+    "coveragePathIgnorePatterns": [
+      "/node_modules/"
+    ]
   },
   "devDependencies": {
     "jest": "^29.7.0",
